# Learning

./: .gitattributes  .gitignore  README.md  WSSignalling.test.py  index.py
BoostLearn/: BoostLearn.sln  Readme.md
CreateJS/: tutorial.html
ElectronPlayGround/: README.md  main.js
GitTip/: HistoryManipulation.md
GraphQL/: README.md  index.js  package.json
Kubernetes/: kub-apply.sh  kub-build.sh  kub-ssh.sh  package-lock.json  package.json  server.js
MP/: ref.js
ReactPlayGround/: .babelrc  README.md  package.json  webpack.config.js  webpack.production.config.js
TensorFlowJS/: .gitignore  README.md  index.js  package-lock.json  package.json
TreeJS/: index.html
Unity3d/: PrototypeTranning.md  QuickDesignUnityTutorial.txt
adm-zip-lazy/: README.md  package-lock.json  package.json  tsconfig.json
aggregate-playground/: package-lock.json  package.json  play.js  snapshot.json
benthos-playground/: active.sh  note.md
bpmn-playground/: README.md  package-lock.json  package.json  play1.js  play2.js  play3.js  play3_v2.js  play4.js  saved.json  saved_3.json  saved_3_2.json  saved_4.json
bun-playground/: README.md  bun.lockb  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  type.d.ts
bun-syncdb-playground/: README.md  bun.lockb  package.json
bun-trpc-playground/: README.md  bun.lockb  package.json
cote-microservice-playground/: package-lock.json  package.json
crypto/: openssl-cipherTypes.sh
cucumber-js-playground/: .gitignore  README.md  package.json
cw/: alpanagrams.js  alpanagrams2.js  bignum.js  dfa_bin_mod7.js  dfa_bin_mod7.md  flist.js  imgProcess.js  interpreter.js  mathexpression.js  pointInPolygon.js  sodoku.js  sqlEngine.js  thing.js  thing2.js  thread.js
data-repo/: .npmignore  docker-compose.yml  package-lock.json  package.json
depth-stack-playground/: run.sh
docs/: me.json
etcd-playground/: makefile  note.md  play.sh
ethereum-tutorial/: Readme.md  package-lock.json  package.json
event-store-node-playground/: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  play.js  play2.js  play3.js
ffmpeg-playground/: Note.md  ffmpeg_opencv_facemesh.py
flow-research/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
fluvio-stream-playground/: 0.getting-start.sh  1.smd.sh
fluvio-stream-playground/quickstart-sm/: Cargo.toml  README.md  SmartModule.toml
fluvio-stream-playground/quickstart-sm/src/: lib.rs
github-api-playground/: .gitignore  Note.md  package-lock.json  package.json  play.js
go/: lesson1.go  lesson2.go  lesson3.go  lesson4.go  lesson5.go  lesson6.go  lesson7.go
go-raft-playground/: README.md  go.mod  raft.go  server.go
graphql-playground/: index.js  note.md  package-lock.json  package.json
greeting_2023/: assemblyscriptHelpler.ts  deno_hello_2023_luna.ts  hello_2023.go  makefile  module.wasm  run.sh
grpc/: client.js  helloworld.proto  package-lock.json  package.json  server.js
gun-db-playground/: package-lock.json  package.json  server.js
ipfs-playground/: ipld-play.js  package.json
jest-snapshot-playground/: .gitignore  jestSnapshot.js  lodash.ext.js  package-lock.json  package.json  play.js
jq-playground/: filter.js  package-lock.json  package.json  play.js
jsonld-practices/: package-lock.json  package.json  playing-jsonld.js
jsvnutils/: Readme.md  index.js  package.json  sshHelper.js  ssh_helper.js  sshjobs.js
jsx-playground/: .gitignore  (+4 more)
opencv-2021-playground/c++/: .gitignore  CMakeCache.txt  CMakeLists.txt  DisplayImage.cpp  DisplayVideo.cpp  DlibFace.cpp  FaceExtractVideoDlib.cpp  FaceExtractVideoHaar.cpp  cmake_install.cmake  note.md
opencv-2021-playground/c++/lib/: dlibFaceDetect.hpp  dlib_dbb_types.h  haarFaceDetect.hpp
rust-playground/async_learn/: Cargo.toml
rust-playground/async_learn/src/: main.rs  mini_runner.rs  mini_runner2.rs  tokio_runner.rs
rust-playground/deno_js_runtime/: .gitignore  Cargo.toml  Note.md  package-lock.json  package.json
rust-playground/deno_js_runtime/jsRuntime/: rt.js  type.d.ts
rust-playground/deno_js_runtime/nodejs/: node_app.js
rust-playground/deno_js_runtime/samples/: SM_log.js  fibo.js  hello.js  hello.ts
rust-playground/deno_js_runtime/src/: lib.rs  main.rs  runjs_engine.rs  ts_loader.rs
rust-playground/nannou_play/: Cargo.toml
rust-playground/nannou_play/src/bevy_rapier_01/: main.rs
rust-playground/nannou_play/src/particle/: main.rs
rust-playground/nannou_play/src/simple_sketch/: main.rs
rust-playground/playground/: Cargo.toml
rust-playground/playground/src/: async_all.rs  async_future_only.rs  async_tokio.rs  crypto.rs  http.rs  main.rs
rust-playground/server_graphql_federation/planets-service/: .env  Cargo.toml
rust-playground/server_graphql_federation/planets-service/migrations/2021-09-03-141531_init/: down.sql  up.sql
rust-playground/server_graphql_federation/planets-service/migrations/2021-09-03-141817_seed/: down.sql  up.sql
rust-playground/server_graphql_federation/planets-service/src/: event_hub.rs  graphql.rs  lib.rs  main.rs
rust-playground/server_graphql_federation/planets-service/src/persistence/: connection.rs  mod.rs  model.rs  repo.rs  schema.rs
rust-playground/server_graphql_federation/planets-service/tests/: gql_test.rs  model_test.rs
rust-playground/server_graphql_federation/planets-service/tests/common/: mod.rs
rust-playground/server_graphql_federation/satellites-service/: .env  Cargo.toml  satellite_dev.sqlite
rust-playground/server_graphql_federation/satellites-service/migrations/2021-09-05-095651_init/: down.sql  up.sql
rust-playground/server_graphql_federation/satellites-service/migrations/2021-09-05-103155_seed/: down.sql  up.sql
rust-playground/server_graphql_federation/satellites-service/src/: graphql.rs  lib.rs  main.rs
rust-playground/server_graphql_federation/satellites-service/src/persistence/: mod.rs  model.rs  repo.rs  schema.rs
rust-playground/server_graphql_federation/satellites-service/tests/: gql_test.rs  model_test.rs
rust-playground/server_graphql_federation/satellites-service/tests/common/: mod.rs
(+1776 files in other folders)
