[package]
name = "deno_js_runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
deno_ast = { version = "0.39.1", features = ["transpiling"] }
deno_core = "0.288.0"
tokio = "1.38.0"
neon = "1"