[package]
edition = "2018"
name = "playground"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.9.0"
futures = "0.3.16"
reqwest = {version = "*", features = ["json"]}
rust-crypto = "0.2.36"
serde = {version = "*", features = ["derive"]}
tokio = {version = "1.16.1", features = ["full"]}
