[package]
edition = "2018"
name = "planets-service"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
bigdecimal = "*"
diesel = {version = "1.4.6", features = ["sqlite", "numeric"]}
dotenv = "0.15.0"
lazy_static = "1.4.0"

[dev-dependencies]
diesel_migrations = "1.4.0"
