[package]
edition = "2018"
name = "planets-service"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.3.2"
actix-web-actors = "3.0.0"
anyhow = "*"
async-graphql = {version = "2.8.4", features = ["dataloader"]}
async-graphql-actix-web = "2.8.4"
diesel = {version = "1.4.6", features = ["sqlite", "r2d2", "numeric"]}
dotenv = "0.15.0"
lazy_static = "1.4.0"
serde = {version = "1.0.125", features = ["derive"]}
serde_json = "1.0.64"
strum = "0.20.0"
strum_macros = "0.20.1"

[dev-dependencies]
diesel_migrations = "1.4.0"
